# collaborative-layout-designer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: MANUAL_TESTING.md  SIGNING.md  TRANSLATING.md  bbm-bld-schema.json  bbm-bld-schema.md  bbm-cld-schema.json  bbm-cld-schema.md  bbm-schema.md  bbm-schema.xsd  set-schema.md
fixtures/bbm-corpus/: README.md  fordyce-2026.bbm  tight-corner.bbm
fixtures/render-goldens/: README.md
packaging/linux/: collaborative-layout-designer.desktop
packaging/windows/: brick-layout-designer.wxs  collaborative-layout-designer.wxs
scripts/: apply-translations.py  capture-render-goldens.sh  harvest-wix.py  run-vanilla-bluebrick.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  bld_inspect.cpp  bld_ldraw_import.cpp  bld_render.cpp  bld_sprite_gen.cpp  cld_inspect.cpp  cld_ldraw_import.cpp  cld_render.cpp  cld_sprite_gen.cpp  main.cpp
src/core/: AnchoredLabel.h  Brick.h  CMakeLists.txt  ColorSpec.h  FontSpec.h  Geometry.h  Group.h  Ids.h  Layer.h  LayerArea.h  LayerBrick.h  LayerGrid.h  LayerItem.h  LayerRuler.h  LayerText.h  Map.cpp  Map.h  Module.h  RulerItem.h  Sidecar.h  TextCell.h  Venue.h
src/edit/: AreaCommands.cpp  AreaCommands.h  Budget.cpp  Budget.h  CMakeLists.txt  Connectivity.cpp  Connectivity.h  EditCommands.cpp  EditCommands.h  LabelCommands.cpp  LabelCommands.h  LayerCommands.cpp  LayerCommands.h  ModuleCommands.cpp  ModuleCommands.h  RulerCommands.cpp  RulerCommands.h  TextCommands.cpp  TextCommands.h  VenueCommands.cpp  VenueCommands.h  VenueValidator.cpp  VenueValidator.h
src/geom/: CMakeLists.txt  Mesh.h
src/import/: CMakeLists.txt  ImportToPart.cpp  ImportToPart.h  LDDGeomReader.cpp  LDDGeomReader.h  LDDLDrawMapping.h  LDDReader.cpp  LDDReader.h  LDrawColors.cpp  LDrawLibrary.h  LDrawMeshBuilder.h  LDrawMeshLoader.cpp  LDrawMeshLoader.h  LDrawPalette.cpp  LDrawPalette.h  LDrawRasterize.h  LDrawReader.cpp  LDrawReader.h  LifReader.h  MeshRasterize.h  StudioReader.h
src/import/ldd/: LDDGeomReader.cpp  LDDGeomReader.h  LDDLDrawMapping.cpp  LDDLDrawMapping.h  LDDMaterials.cpp  LDDMaterials.h  LDDMeshBuilder.cpp  LDDMeshBuilder.h  LDDReader.cpp  LDDReader.h
src/import/ldraw/: LDrawColors.cpp  LDrawColors.h  LDrawLibrary.cpp  LDrawLibrary.h  LDrawMeshBuilder.cpp  LDrawMeshBuilder.h  LDrawMeshLoader.cpp  LDrawMeshLoader.h  LDrawPalette.cpp  LDrawPalette.h  LDrawRasterize.cpp  LDrawRasterize.h  LDrawReader.cpp  LDrawReader.h
src/import/lif/: LifReader.cpp  LifReader.h
src/import/mesh/: MeshRasterize.cpp  MeshRasterize.h
src/import/studio/: StudioReader.cpp  StudioReader.h
src/parts/: CMakeLists.txt  PartsLibrary.cpp  PartsLibrary.h
src/rendering/: CMakeLists.txt  MapScene.h  SceneBuilder.cpp  SceneBuilder.h  SceneBuilderElectric.cpp  SceneBuilderInternal.h  SceneBuilderSidecar.cpp
src/saveload/: BbmReader.cpp  BbmReader.h  BbmWriter.cpp  BbmWriter.h  CMakeLists.txt  LayerIO.cpp  LayerIO.h  SetIO.cpp  SetIO.h  SidecarIO.cpp  SidecarIO.h  VenueIO.cpp  VenueIO.h  XmlCanonicalWriter.cpp  XmlCanonicalWriter.h  XmlPrimitives.cpp  XmlPrimitives.h
src/ui/: BackgroundTask.h  BudgetDialog.cpp  BudgetDialog.h  CMakeLists.txt  ConnectionSnap.cpp  ConnectionSnap.h  DownloadCenterDialog.cpp  DownloadCenterDialog.h  EditDialogs.cpp  EditDialogs.h  FindDialog.cpp  FindDialog.h  ImportPreviewDialog.cpp  ImportPreviewDialog.h  LayerPanel.cpp  LayerPanel.h  LibraryPathsDialog.cpp  LibraryPathsDialog.h  MainWindow.cpp  MainWindow.h  MainWindowFileIO.cpp  MainWindowLibrary.cpp  MainWindowMapMenu.cpp  MainWindowMenus.cpp  MainWindowToolsMenu.cpp  MapView.cpp  MapView.h  MapViewClipboard.cpp  MapViewContextMenu.cpp  MapViewDrag.cpp  MapViewInternal.h  MapViewPaint.cpp  ModuleLibraryPanel.cpp  ModuleLibraryPanel.h  ModulesPanel.cpp  ModulesPanel.h  PartUsagePanel.cpp  PartUsagePanel.h  PartsBrowser.cpp  PartsBrowser.h  (+10 more)
tests/: CMakeLists.txt
tests/edit/: AreaCommandsTest.cpp  CMakeLists.txt  EditCommandsTest.cpp  LabelCommandsTest.cpp  LayerCommandsTest.cpp  ModuleCommandsTest.cpp
tests/import/: CMakeLists.txt  LDDGeomReaderTest.cpp  LDDLDrawMappingTest.cpp  LDDMaterialsTest.cpp  LDDReaderTest.cpp  LDrawLibraryTest.cpp  LDrawMeshLoaderTest.cpp  LDrawPaletteTest.cpp  LDrawRasterizeTest.cpp  LDrawReaderTest.cpp  LifReaderTest.cpp  MeshRasterizeTest.cpp  StudioReaderTest.cpp
tests/parts/: CMakeLists.txt  PartsLibraryTest.cpp
tests/rendering/: CMakeLists.txt  RenderGoldensTest.cpp  RenderSmokeTest.cpp
tests/saveload/: CMakeLists.txt  RealFixtureTest.cpp  RoundTripTest.cpp  SetIOTest.cpp  SidecarTest.cpp
translations/: bld_de.ts  bld_es.ts  bld_fr.ts  bld_it.ts  bld_ja.ts  bld_nl.ts  bld_pt.ts  bld_zh.ts  cld_de.ts  cld_es.ts  cld_fr.ts  cld_it.ts  cld_ja.ts  cld_nl.ts  cld_pt.ts  cld_zh.ts
