add_library(cld_ui STATIC
    MainWindow.cpp
    MainWindow.h
    MainWindowFileIO.cpp
    MainWindowLibrary.cpp
    MainWindowMapMenu.cpp
    MainWindowMenus.cpp
    MapView.cpp
    MapView.h
    MapViewDrag.cpp
    MapViewClipboard.cpp
    MapViewContextMenu.cpp
    MapViewPaint.cpp
    MapViewInternal.h
    ConnectionSnap.cpp
    ConnectionSnap.h
    SelectionOverlay.cpp
    SelectionOverlay.h
    LayerPanel.cpp
    LayerPanel.h
    PartsBrowser.cpp
    PartsBrowser.h
    ModulesPanel.cpp
    ModulesPanel.h
    ModuleLibraryPanel.cpp
    ModuleLibraryPanel.h
    PartUsagePanel.cpp
    PartUsagePanel.h
    LibraryPathsDialog.cpp
    LibraryPathsDialog.h
    EditDialogs.cpp
    EditDialogs.h
    PreferencesDialog.cpp
    PreferencesDialog.h
    FindDialog.cpp
    FindDialog.h
    BudgetDialog.cpp
    BudgetDialog.h
    VenueDialog.cpp
    VenueDialog.h
    VenueDimensionsDialog.cpp
    VenueDimensionsDialog.h
)

target_link_libraries(cld_ui
    PUBLIC
        cld_core
        cld_saveload
        cld_parts
        cld_rendering
        cld_edit
        cld_import
        Qt6::Core
        Qt6::Gui
        Qt6::Widgets
        Qt6::PrintSupport
)
